banco_honda/infra/network/internet-gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "igw"
    Env  = var.env
  }
}
