banco_honda/infra/network/vpcs.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
     Name = var.env
     Env  = var.env
     "kubernetes.io/cluster/${var.env}" = "shared"
  }
}
